fixed spacing

--- a/src/components/article-preview.module.css
+++ b/src/components/article-preview.module.css
@@ -1,5 +1,4 @@
 .article-list {
-  margin: 0;
   padding: 0;
   list-style: none;
   display: grid;
